Remove useless home page + Implement full screen mode (still buggy on IE and Edge for some reasons...)

--- a/app/elements/page-c/page-c.css
+++ b/app/elements/page-c/page-c.css
@@ -17,3 +17,7 @@
   color: inherit;
   text-decoration: inherit;
 }
+
+p.secondary {
+  color: rgba(0, 0, 0, 0.4);
+}
